[package]
name = "coffee-gravity"
version = "0.1.0"
authors = ["samuel-weinstein-cs <raeweinst@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

coffee = { version = "0.4", features = ["opengl"] }
nalgebra = "0.18.1"
